fix(a11y): contrast ratio 4.5 for try-me buttons

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -279,7 +279,7 @@ strong {
 }
 
 .show-example-btn {
-  $btn-blue: #7367f0;
+  $btn-blue: #7066e0;
   $btn-gray: #d0d0d0;
 
   padding: .9em 2.1875em;
